DG-91 Ability to permamently delete schemas
