# core/src/main/java/io/confluent/kafka/schemaregistry/rest/exceptions/Errors.java
@@ -30,6 +30,20 @@ public class Errors {
   public static final String SCHEMA_NOT_FOUND_MESSAGE = "Schema not found";
   public static final String SCHEMA_NOT_FOUND_MESSAGE_FORMAT = "Schema %s not found";
   public static final int SCHEMA_NOT_FOUND_ERROR_CODE = 40403;
+  public static final String SUBJECT_SOFT_DELETED_MESSAGE_FORMAT = "Subject '%s' exists in soft deleted format."
+          + "Set permanent=true to delete permanently";
+  public static final int SUBJECT_SOFT_DELETED_ERROR_CODE = 40404;
+  public static final String SUBJECT_NOT_SOFT_DELETED_MESSAGE_FORMAT = "Subject '%s' was not deleted "
+          + "first before permanent delete";
+  public static final int SUBJECT_NOT_SOFT_DELETED_ERROR_CODE = 40405;
+  public static final String SCHEMAVERSION_SOFT_DELETED_MESSAGE_FORMAT = "Subject '%s' Version %s exists in soft deleted format."
+          + "Set permanent=true to delete permanently";
+  public static final int SCHEMAVERSION_SOFT_DELETED_ERROR_CODE = 40406;
+  public static final String SCHEMAVERSION_NOT_SOFT_DELETED_MESSAGE_FORMAT = "Subject '%s' Version %s was not deleted "
+          + "first before permanent delete";
+  public static final int SCHEMAVERSION_NOT_SOFT_DELETED_ERROR_CODE = 40407;
+
+
 
   // HTTP 409
   public static final int INCOMPATIBLE_SCHEMA_ERROR_CODE = Response.Status.CONFLICT.getStatusCode();
@@ -52,6 +66,26 @@ public class Errors {
   public static RestException subjectNotFoundException(String subject) {
     return new RestNotFoundException(
         String.format(SUBJECT_NOT_FOUND_MESSAGE_FORMAT, subject), SUBJECT_NOT_FOUND_ERROR_CODE);
+  }
+
+  public static RestException subjectSoftDeletedException(String subject) {
+    return new RestNotFoundException(
+            String.format(SUBJECT_SOFT_DELETED_MESSAGE_FORMAT, subject), SUBJECT_SOFT_DELETED_ERROR_CODE);
+  }
+
+  public static RestException subjectNotSoftDeletedException(String subject) {
+    return new RestNotFoundException(
+            String.format(SUBJECT_NOT_SOFT_DELETED_MESSAGE_FORMAT, subject), SUBJECT_NOT_SOFT_DELETED_ERROR_CODE);
+  }
+
+  public static RestException schemaVersionSoftDeletedException(String subject, String version) {
+    return new RestNotFoundException(
+            String.format(SCHEMAVERSION_SOFT_DELETED_MESSAGE_FORMAT, subject, version), SCHEMAVERSION_SOFT_DELETED_ERROR_CODE);
+  }
+
+  public static RestException schemaVersionNotSoftDeletedException(String subject, String version) {
+    return new RestNotFoundException(
+            String.format(SCHEMAVERSION_NOT_SOFT_DELETED_MESSAGE_FORMAT, subject, version), SCHEMAVERSION_NOT_SOFT_DELETED_ERROR_CODE);
   }
 
   public static RestException versionNotFoundException(Integer id) {
