# core/src/main/java/io/confluent/kafka/schemaregistry/rest/resources/SubjectsResource.java
@@ -15,6 +15,7 @@
 
 package io.confluent.kafka.schemaregistry.rest.resources;
 
+import io.confluent.kafka.schemaregistry.exceptions.SubjectNotSoftDeletedException;
 import io.swagger.annotations.ApiOperation;
 import io.swagger.annotations.ApiParam;
 import io.swagger.annotations.ApiResponse;
@@ -100,7 +101,7 @@ public class SubjectsResource {
     );
     io.confluent.kafka.schemaregistry.client.rest.entities.Schema matchingSchema = null;
     try {
-      if (!schemaRegistry.hasSubjects(subject)) {
+      if (!schemaRegistry.hasSubjects(subject, lookupDeletedSchema)) {
         throw Errors.subjectNotFoundException(subject);
       }
       matchingSchema =
@@ -114,8 +115,6 @@ public class SubjectsResource {
     }
     asyncResponse.resume(matchingSchema);
   }
-
-
 
   @GET
   @Valid
@@ -147,18 +146,26 @@ public class SubjectsResource {
       final @Suspended AsyncResponse asyncResponse,
       @Context HttpHeaders headers,
       @ApiParam(value = "the name of the subject", required = true)
-        @PathParam("subject") String subject) {
+      @PathParam("subject") String subject,
+      @QueryParam("permanent") boolean permanentDelete) {
     log.info("Deleting subject {}", subject);
     List<Integer> deletedVersions;
     try {
-      if (!schemaRegistry.hasSubjects(subject)) {
+      if (!schemaRegistry.hasSubjects(subject, true)) {
         throw Errors.subjectNotFoundException(subject);
+      }
+      if (!permanentDelete && !schemaRegistry.hasSubjects(subject, false)) {
+        throw Errors.subjectSoftDeletedException(subject);
       }
       Map<String, String> headerProperties = requestHeaderBuilder.buildRequestHeaders(
           headers, schemaRegistry.config().whitelistHeaders());
-      deletedVersions = schemaRegistry.deleteSubjectOrForward(headerProperties, subject);
+      deletedVersions = schemaRegistry.deleteSubjectOrForward(headerProperties,
+              subject,
+              permanentDelete);
     } catch (ReferenceExistsException e) {
       throw Errors.referenceExistsException(e.getMessage());
+    } catch (SubjectNotSoftDeletedException e) {
+      throw Errors.subjectNotSoftDeletedException(subject);
     } catch (SchemaRegistryException e) {
       throw Errors.schemaRegistryException("Error while deleting the subject " + subject,
                                            e);
